--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start": "next start",
     "lint": "eslint"
   },
+  "engines": {
+    "node": ">=22.0.0"
+  },
   "dependencies": {
     "@types/formidable": "^3.4.6",
     "@types/nodemailer": "^7.0.9",
@@ -17,11 +20,11 @@
     "leaflet": "^1.9.4",
     "lenis": "^1.3.17",
     "lucide-react": "^0.562.0",
-    "next": "16.1.4",
+    "next": "15.1.7",
     "next-themes": "^0.4.6",
     "nodemailer": "^8.0.1",
-    "react": "19.2.3",
-    "react-dom": "19.2.3",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-leaflet": "^5.0.0",
     "tailwind-merge": "^3.4.0"
   },
@@ -32,8 +35,10 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "16.1.4",
-    "tailwindcss": "^4",
+    "eslint-config-next": "15.1.7",
+    "tailwindcss": "^3.4.17",
+    "postcss": "^8",
+    "autoprefixer": "^10",
     "typescript": "^5"
   }
 }
