--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "leaflet": "^1.9.4",
     "lenis": "^1.3.17",
     "lucide-react": "^0.562.0",
-    "next": "15.1.7",
+    "next": "^16.1.6",
     "next-themes": "^0.4.6",
     "nodemailer": "^8.0.1",
     "react": "19.0.0",
@@ -34,11 +34,11 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.7",
-    "tailwindcss": "^3.4.17",
-    "postcss": "^8",
     "autoprefixer": "^10",
+    "eslint": "^9",
+    "eslint-config-next": "^16.1.6",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
 }
